# PolySolveLib

./: LICENSE  README.md  pyproject.toml
.github/workflows/: static.yml
docs/source/: algorithm.rst  conf.py  index.rst  usage.rst
polysolve/: solver.py
tests/: test_quadratic.py
